fix: Update container styles and layout spacing across components

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 body{
-	@apply container mx-auto max-w-4xl bg-white text-black dark:bg-slate-950 dark:text-slate-100
+	@apply mx-auto bg-white text-black dark:bg-slate-950 dark:text-slate-100  
 }
 @layer base {
   :root {
